tests/errors/sem_call9.java
public class sem_call9 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(3 , true );
}
}